@@ -5,7 +5,7 @@
 # Bad
 #[1](-8)
 #[1](-19.9999)
-# Square
+# Circle
 #[1](-0.839072)
 #[1](-0.839099)
 #[1](-0.544021)
@@ -17,7 +17,7 @@
 # Bad
 #[1](-3)
 #[1](-17.9999)
-# Square
+# Circle
 #[1](-0.91113)
 #[1](-0.91111)
 #[1](0.412118)
@@ -29,7 +29,7 @@
 # Bad
 #[1](2)
 #[1](-15.9999)
-# Square
+# Circle
 #[1](-0.1455)
 #[1](-0.145451)
 #[1](0.989358)
@@ -41,7 +41,7 @@
 # Bad
 #[1](7)
 #[1](-13.9999)
-# Square
+# Circle
 #[1](0.753902)
 #[1](0.753935)
 #[1](0.656987)
@@ -53,7 +53,7 @@
 # Bad
 #[1](12)
 #[1](-11.9999)
-# Square
+# Circle
 #[1](0.96017)
 #[1](0.960156)
 #[1](-0.279415)
@@ -65,7 +65,7 @@
 # Bad
 #[1](17)
 #[1](-9.9999)
-# Square
+# Circle
 #[1](0.283662)
 #[1](0.283614)
 #[1](-0.958924)
@@ -77,7 +77,7 @@
 # Bad
 #[1](22)
 #[1](-7.9999)
-# Square
+# Circle
 #[1](-0.653644)
 #[1](-0.653681)
 #[1](-0.756802)
@@ -89,7 +89,7 @@
 # Bad
 #[1](27)
 #[1](-5.9999)
-# Square
+# Circle
 #[1](-0.989992)
 #[1](-0.989985)
 #[1](0.14112)
@@ -101,7 +101,7 @@
 # Bad
 #[1](32)
 #[1](-3.9999)
-# Square
+# Circle
 #[1](-0.416147)
 #[1](-0.416101)
 #[1](0.909297)
@@ -113,7 +113,7 @@
 # Bad
 #[1](37)
 #[1](-1.9999)
-# Square
+# Circle
 #[1](0.540302)
 #[1](0.540344)
 #[1](0.841471)
@@ -125,7 +125,7 @@
 # Bad
 #[1](42)
 #[1](0.0001)
-# Square
+# Circle
 #[1](1)
 #[1](1)
 #[1](-0)
@@ -137,7 +137,7 @@
 # Bad
 #[1](47)
 #[1](2.0001)
-# Square
+# Circle
 #[1](0.540302)
 #[1](0.54026)
 #[1](-0.841471)
@@ -149,7 +149,7 @@
 # Bad
 #[1](52)
 #[1](4.0001)
-# Square
+# Circle
 #[1](-0.416147)
 #[1](-0.416192)
 #[1](-0.909297)
@@ -161,7 +161,7 @@
 # Bad
 #[1](57)
 #[1](6.0001)
-# Square
+# Circle
 #[1](-0.989992)
 #[1](-0.99)
 #[1](-0.14112)
@@ -173,7 +173,7 @@
 # Bad
 #[1](62)
 #[1](8.0001)
-# Square
+# Circle
 #[1](-0.653644)
 #[1](-0.653606)
 #[1](0.756802)
@@ -185,7 +185,7 @@
 # Bad
 #[1](67)
 #[1](10.0001)
-# Square
+# Circle
 #[1](0.283662)
 #[1](0.28371)
 #[1](0.958924)
@@ -197,7 +197,7 @@
 # Bad
 #[1](72)
 #[1](12.0001)
-# Square
+# Circle
 #[1](0.96017)
 #[1](0.960184)
 #[1](0.279415)
@@ -209,7 +209,7 @@
 # Bad
 #[1](77)
 #[1](14.0001)
-# Square
+# Circle
 #[1](0.753902)
 #[1](0.753869)
 #[1](-0.656987)
@@ -221,7 +221,7 @@
 # Bad
 #[1](82)
 #[1](16.0001)
-# Square
+# Circle
 #[1](-0.1455)
 #[1](-0.14555)
 #[1](-0.989358)
@@ -233,7 +233,7 @@
 # Bad
 #[1](87)
 #[1](18.0001)
-# Square
+# Circle
 #[1](-0.91113)
 #[1](-0.911151)
 #[1](-0.412118)
